@@ -1,3 +1,6 @@
+2014-03-16 - Dejan Golja <dejan@golja.org> - 0.0.3
+* Added Puppet Forge Search by Module Compatibility
+
 2013-10-22 - Dejan Golja <dejan@golja.org> - 0.0.2
 * public release for Forge
 
